Use "linear" as the default easing for neutral keyframes in element.animate()

By explicitly setting "linear" as the default keyframe easing when using
element.animate() we don't accidentally start compositor animations
using their default of "ease".

BUG=601407

Review URL: https://codereview.chromium.org/1866153003

Cr-Commit-Position: refs/heads/master@{#387537}

Former-commit-id: 99d5466b3824d1170c02088d7c38e2ca1e53c95b